[10.4] Esc key doesn't cancel out Ctrl+Tab panel (work around Apple bug). b=445531 r=josh sr=roc